# CEPR

./: README.md  XGBoost.ipynb  main.py  pyproject.toml
checkpoints/: CEPR_model_xgb.pkl
