[tool.poetry]
name = "cepr ml diagnostics"
version = "0.1.0"
description = ""
authors = ["Artem Ryzhikov <artem@havona.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
xgboost = "^2.0.3"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
